--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,10 @@ set(SOURCE_FILES counter.cpp counter.h interval.cpp interval.h stats.cc stats.h)
 add_library(codeperf ${SOURCE_FILES})
 
 find_package(Threads REQUIRED)
-find_package(GTest REQUIRED)
-add_executable(test-codeperf test.cpp)
-target_link_libraries(test-codeperf codeperf ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
-add_test(all test-codeperf)
+#find_package(GTest REQUIRED)
+#add_executable(test-codeperf test.cpp)
+#target_link_libraries(test-codeperf codeperf ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+#add_test(all test-codeperf)
 
 file(GLOB INSTALL_HEADERS "${PROJECT_SOURCE_DIR}/*.h")
 install(FILES ${INSTALL_HEADERS}
